--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </ul>
           </nav><!-- .nav-menu -->
 
-          <a href="#clients" class="get-started-btn scrollto">Brochure</a>
+          <!-- <a href="#clients" class="get-started-btn scrollto">Brochure</a> -->
         </div>
       </div>
 
@@ -89,10 +89,11 @@
         <div class="row justify-content-center">
           <div class="section-title">
             <h2>QUIENES SOMOS</h2>
-            <p>Somos una PyME que desde hace más de 60 años comercializa y distribuye productos químicos
-              industriales. Estamos comprometidos con la calidad, el cuidado del medio ambiente y la satisfacción de
-              nuestros clientes, y lo hacemos apostando a lo más importante: nuestro capital humano. Somos el socio
-              estratégico ideal para su empresa.</p>
+            <p>Somos una empresa pyme que comercializa productos químicos industriales. Contamos con amplia experiencia
+              en el rubro
+              químico y estamos orientados al mercado de Uruguay, Brasil. Argentina, Paraguay y Bolivia. Ofrecemos
+              productos ​de todo
+              el mundo​ y ​de ​reconocida ​calidad​.​ Queremos ser su proveedor de confianza. Contáctenos!</p>
           </div>
         </div>
       </div>
@@ -107,10 +108,10 @@
             <div class="content">
               <h3>¿Cuales son nuestros Objetivos?</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                Ofrecer productos y servicios que cumplan y excedan las expectativas del mercado, manteniendo vínculos
+                de confianza a largo plazo con clientes y proveedores.
               </p>
-              <a href="#" class="about-btn"><span>Brochure</span> <i class="bx bx-chevron-right"></i></a>
+              <!-- <a href="#" class="about-btn"><span>Brochure</span> <i class="bx bx-chevron-right"></i></a> -->
             </div>
           </div>
           <div class="col-xl-7 d-flex align-items-stretch">
@@ -119,22 +120,22 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-receipt"></i>
                   <h4>Ser su socio estrategico</h4>
-                  <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                  <!-- <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p> -->
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-cube-alt"></i>
                   <h4>Proveer productos y servicios de calidad</h4>
-                  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                  <!-- <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p> -->
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-images"></i>
                   <h4>Generar relacionnes de largo plazo</h4>
-                  <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                  <!-- <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p> -->
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-shield"></i>
                   <h4>Respetar el medio ambiente</h4>
-                  <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+                  <!-- <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p> -->
                 </div>
               </div>
             </div><!-- End .content-->
@@ -195,9 +196,9 @@
 
         <div class="section-title">
           <h2>Mercados</h2>
-          <p>Quisquam quos quisquam cupiditate. Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
-            aliquid fuga eum quidem. Sit sint
-            consectetur velit. Et nemo qui impedit suscipit alias ea.</p>
+          <p>Trabajamos de la mano con proveedores confiables y reconocidos en la industria química para asegurarnos de
+            ofrecerte
+            productos de última generación. Estos son algunos de los mercados en los que operamos:</p>
         </div>
 
         <div class="row">
@@ -353,9 +354,7 @@
 
         <div class="section-title">
           <h2>Contacto</h2>
-          <p>Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Magnam dolores
-            commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. </p>
+          <p>Puedes comunicarte con nosotros de las siguientes formas: </p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -367,23 +366,23 @@
                 <div class="info-box">
                   <i class="bx bx-map"></i>
                   <h3>Dirección</h3>
-                  <p>La Rambla Street, Montevideo, URU 535022</p>
+                  <p>Montevideo, Uruguay</p>
                 </div>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-12">
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email</h3>
-                  <p>info@tilceny.com<br>contact@tilceny.com</p>
+                  <p>info@tilceny.com<br>ventas@tilceny.com</p>
                 </div>
               </div>
-              <div class="col-md-6">
+              <!-- <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
                   <h3>Llamenos</h3>
                   <p>+54 11 4489 55488<br>+54 7678 2544</p>
                 </div>
-              </div>
+              </div> -->
             </div>
 
           </div>
@@ -408,7 +407,7 @@
                 <div class="validate"></div>
               </div>
               <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" data-rule="required"
+                <textarea class="form-control" name="message" rows="6" data-rule="required"
                   data-msg="Please write something for us" placeholder="Mensaje"></textarea>
                 <div class="validate"></div>
               </div>
@@ -438,11 +437,12 @@
           <div class="col-lg-4 col-md-6 footer-contact">
             <h3>Tilceny<span>.</span></h3>
             <p>
-              La Rambla Street <br>
-              Montevideo 535022<br>
+              <!-- La Rambla Street <br> -->
+              Montevideo<br>
               Uruguay <br><br>
-              <strong>Tel:</strong> +54 11 4489 55488<br>
-              <strong>Email:</strong> info@tilceny.com<br>
+              <!-- <strong>Tel:</strong> +54 11 4489 55488<br> -->
+              <strong>Email:</strong>
+              <br>info@tilceny.com<br>ventas@tilceny.com<br>
             </p>
           </div>
 
