--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
         <div class="row no-gutters">
           <div class="content col-xl-5 d-flex align-items-stretch">
             <div class="content">
-              <h3>¿Cuales son nuestros Objetivos?</h3>
-              <p>
+              <h3>Nuestros Objetivos</h3>
+              <!-- <p>
                 Ofrecer productos y servicios que cumplan y excedan las expectativas del mercado, manteniendo vínculos
                 de confianza a largo plazo con clientes y proveedores.
-              </p>
+              </p> -->
               <!-- <a href="#" class="about-btn"><span>Brochure</span> <i class="bx bx-chevron-right"></i></a> -->
             </div>
           </div>
@@ -151,15 +151,15 @@
 
         <div class="row">
 
-          <div class="col-lg-3 col-md-6">
+          <!-- <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
               <span data-toggle="counter-up">232</span>
               <p>Clientes</p>
             </div>
-          </div>
+          </div> -->
 
-          <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+          <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="icofont-document-folder"></i>
               <span data-toggle="counter-up">48</span>
@@ -167,7 +167,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+          <div class="col-lg-4 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-live-support"></i>
               <span data-toggle="counter-up">1.463</span>
@@ -175,7 +175,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+          <div class="col-lg-4 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-users-alt-5"></i>
               <span data-toggle="counter-up">15</span>
@@ -196,16 +196,16 @@
 
         <div class="section-title">
           <h2>Mercados</h2>
-          <p>Trabajamos de la mano con proveedores confiables y reconocidos en la industria química para asegurarnos de
+          <!-- <p>Trabajamos de la mano con proveedores confiables y reconocidos en la industria química para asegurarnos de
             ofrecerte
-            productos de última generación. Estos son algunos de los mercados en los que operamos:</p>
+            productos de última generación. Estos son algunos de los mercados en los que operamos:</p> -->
         </div>
 
         <div class="row">
           <div class="col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <i class="icofont-truck"></i>
-              <h4><a href="#">Agroindustria / Curtiembres / Minería</a></h4>
+              <i class="icofont-vehicle-trucktor"></i>
+              <h4><a href="#">Agroindustria</a></h4>
               <!-- <p>Industrias que utilizan productos químicos para procesos agrícolas</p> -->
             </div>
           </div>
@@ -219,21 +219,21 @@
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <i class="icofont-image"></i>
-              <h4><a href="#">Fabricantes de Químicos / Pinturas / Textil </a></h4>
+              <h4><a href="#">Fabricantes de Químicos</a></h4>
               <!-- <p>Industrias que utilizan productos químicos en la fabricación de diversos productos</p> -->
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <i class="icofont-settings"></i>
-              <h4><a href="#">Limpiadores / Personal Care</a></h4>
+              <h4><a href="#">Limpiadores</a></h4>
               <!-- <p>Industrias relacionadas con el cuidado y limpieza</p> -->
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="500">
               <i class="icofont-earth"></i>
-              <h4><a href="#">Biodiésel / Oil&Gas</a></h4>
+              <h4><a href="#">Biodiésel</a></h4>
               <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p> -->
             </div>
           </div>
@@ -244,6 +244,47 @@
               <!-- <p>Industrias farmacéuticas y de medicamentos</p> -->
             </div>
           </div>
+
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="500">
+              <i class="icofont-cow"></i>
+              <h4><a href="#">Curtiembres</a></h4>
+            </div>
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="600">
+              <i class="icofont-mining"></i>
+              <h4><a href="#">Minería</a></h4>
+            </div>
+          </div>
+
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="500">
+              <i class="icofont-paint-brush"></i>
+              <h4><a href="#">Pinturas</a></h4>
+            </div>
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="600">
+              <i class="icofont-businessman"></i>
+              <h4><a href="#">Textil</a></h4>
+            </div>
+          </div>
+
+
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="500">
+              <i class="icofont-microscope-alt"></i>
+              <h4><a href="#">Personal Care</a></h4>
+            </div>
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="600">
+              <i class="icofont-energy-oil"></i>
+              <h4><a href="#">Oil&Gas</a></h4>
+            </div>
+          </div>
+
         </div>
 
       </div>
@@ -373,7 +414,7 @@
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email</h3>
-                  <p>info@tilceny.com<br>ventas@tilceny.com</p>
+                  <p>ventas@tilceny.com</p>
                 </div>
               </div>
               <!-- <div class="col-md-6">
@@ -407,7 +448,7 @@
                 <div class="validate"></div>
               </div>
               <div class="form-group">
-                <textarea class="form-control" name="message" rows="6" data-rule="required"
+                <textarea class="form-control" name="message" rows="5" data-rule="required"
                   data-msg="Please write something for us" placeholder="Mensaje"></textarea>
                 <div class="validate"></div>
               </div>
@@ -442,7 +483,7 @@
               Uruguay <br><br>
               <!-- <strong>Tel:</strong> +54 11 4489 55488<br> -->
               <strong>Email:</strong>
-              <br>info@tilceny.com<br>ventas@tilceny.com<br>
+              <br>ventas@tilceny.com<br>
             </p>
           </div>
 
