--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email</h3>
-                  <p>ventas@tilceny.com</p>
+                  <p>ventas@tilceny.uy</p>
                 </div>
               </div>
               <!-- <div class="col-md-6">
@@ -483,7 +483,7 @@
               Uruguay <br><br>
               <!-- <strong>Tel:</strong> +54 11 4489 55488<br> -->
               <strong>Email:</strong>
-              <br>ventas@tilceny.com<br>
+              <br>ventas@tilceny.uy<br>
             </p>
           </div>
 
