contact and texts

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
         <div class="col-xl-10">
           <div class="row">
             <div class="col-xl-5">
-              <h1>Lideres en la Industria Química</h1>
+              <span class="logo">Tilceny</span><span class="logo-point">.</span>
+              <h1>Estamos enfocados en la Industria Química</h1>
               <h2>Somos el socio ideal para su empresa</h2>
               <a href="#clients" class="btn-get-started scrollto">Conozcanos</a>
             </div>
@@ -129,7 +130,7 @@
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-images"></i>
-                  <h4>Generar relacionnes de largo plazo</h4>
+                  <h4>Generar relaciones de largo plazo</h4>
                   <!-- <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p> -->
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
@@ -178,8 +179,8 @@
           <div class="col-lg-4 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-users-alt-5"></i>
-              <span data-toggle="counter-up">15</span>
-              <p>Empleados</p>
+              <span data-toggle="counter-up">12</span>
+              <p>Mercados</p>
             </div>
           </div>
 
@@ -301,85 +302,64 @@
         <ul class="faq-list" data-aos="fade-up">
 
           <li>
-            <a data-toggle="collapse" class="collapsed" href="#faq1">Acidos <i
+            <a data-toggle="collapse" class="collapsed" href="#faq1">Ácidos <i
                 class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
             <div id="faq1" class="collapse" data-parent=".faq-list">
               <ul class="mt-4">
-                <li> Ácido Acético Glacial </li>
-                <li> Ácido Clorhídrico </li>
+                <li> Acido 2- Etilhexanoico </li>
+                <li> Acido Acético Glacial </li>
+                <li> Ácido Cítrico </li>
                 <li> Ácido Fórmico </li>
                 <li> Ácido Fosfórico </li>
-                <li> Ácido Fosfórico Food Grade </li>
                 <li> Ácido Fosforoso </li>
                 <li> Ácido Glucónico </li>
-                <li> Ácido Láctico Industrial </li>
-                <li> Ácido Nítrico </li>
-                <li> Ácido Oxálico </li>
-                <li> Ácido Sulfúrico </li>
-
+                <li> Acido Láctico </li>
               </ul>
             </div>
           </li>
 
           <li>
-            <a data-toggle="collapse" href="#faq2" class="collapsed">Aguas<i class="bx bx-chevron-down icon-show"></i><i
+            <a data-toggle="collapse" href="#faq2" class="collapsed">Sales<i class="bx bx-chevron-down icon-show"></i><i
                 class="bx bx-x icon-close"></i></a>
             <div id="faq2" class="collapse" data-parent=".faq-list">
               <ul class="mt-4">
-                <li> Agua Amoniacal </li>
-                <li> Agua Oxigenada </li>
-                <li> Agua Ureica </li>
+                <li> Bicarbonato de Sodio </li>
+                <li> Carbonato de Potasio </li>
+                <li> Carbonato de Sodio </li>
+                <li> Cloruro de Calcio </li>
+                <li> Cloruro de Magnesio </li>
+                <li> Cloruro de Potasio </li>
+                <li> Hidrosulfito de Sodio </li>
+                <li> Metabisulfito de Sodio </li>
+                <li> Sulfato de Amonio </li>
+                <li> Sulfato de Magnesio </li>
+                <li> Sulfato de Potasio </li>
+                <li> Sulfato de Sodio </li>
+                <li> Sulfato de Zinc </li>
+                <li> Sulfuro de Sodio </li>
+                <li> Tripolifosfato de Sodio </li>
               </ul>
             </div>
           </li>
 
           <li>
-            <a data-toggle="collapse" href="#faq3" class="collapsed">Compuestos inorgánicos<i
+            <a data-toggle="collapse" href="#faq3" class="collapsed">Especialidades<i
                 class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
             <div id="faq3" class="collapse" data-parent=".faq-list">
               <ul class="mt-4">
-                <li> Amoníaco Anhidro </li>
-                <li> Benzoato de Sodio Food Grade </li>
-                <li> Carbonato de Sodio </li>
-                <li> Cloruro de Calcio </li>
-                <li> Cloruro de Potasio </li>
-                <li> EDTA </li>
-                <li> Formiato de Potasio </li>
-                <li> Formiato de Sodio </li>
-                <li> Fosfato Diamónico DAP </li>
-                <li> Fosfato Monoamónico MAP </li>
-                <li> Fosfato Monocálcico Feed Grade </li>
-                <li> Hidrosulfito de Sodio </li>
-                <li> Hipoclorito de Sodio </li>
-                <li> Nitrato de Potasio </li>
-                <li> Nitrato de Sodio </li>
-                <li> Sulfato de Amonio </li>
-                <li> Sulfato de Cobre </li>
-                <li> Sulfato de Hierro </li>
-                <li> Sulfato de Magnesio </li>
-                <li> Sulfato de Manganesio </li>
-                <li> Sulfato de Potasio </li>
-                <li> Sulfato de Sodio </li>
-                <li> Sulfhidrato de Sodio NAHS </li>
-                <li> Sulfito de Sodio </li>
-                <li> Sulfuro de Sodio </li>
-                <li> Tiosulfato de Sodio </li>
-                <li> Tripolifosfato de Sodio </li>
-                <li> Zeolitas </li>
+                <li> Índigo </li>
               </ul>
             </div>
           </li>
 
           <li>
-            <a data-toggle="collapse" href="#faq4" class="collapsed">Compuestos orgánicos<i
-                class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
+            <a data-toggle="collapse" href="#faq4" class="collapsed">Otros<i class="bx bx-chevron-down icon-show"></i><i
+                class="bx bx-x icon-close"></i></a>
             <div id="faq4" class="collapse" data-parent=".faq-list">
               <ul class="mt-4">
-                <li> Isobutanol </li>
+                <li> Agua Oxigenada </li>
                 <li> Monoetanolamina </li>
-                <li> Nonil Fenol </li>
-                <li> Urea Automotriz </li>
-                <li> Urea Grado Industrial </li>
+                <li> Potasa Caustica </li>
               </ul>
             </div>
           </li>
@@ -490,10 +470,10 @@
           <div class="col-lg-4 col-md-6 footer-links">
             <h4>Productos</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#faq" class="scrollto">Acidos</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#faq" class="scrollto">Aguas</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#faq" class="scrollto">Compuestos inorgánicos</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#faq" class="scrollto">Compuestos orgánicos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#faq" class="scrollto">Ácidos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#faq" class="scrollto">Sales</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#faq" class="scrollto">Especialidades</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#faq" class="scrollto">Otros</a></li>
             </ul>
           </div>
 
