--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Tilceny - Insumos Quimicos</title>
   <meta
-    content="Somos una PyME que desde hace más de 60 años comercializa y distribuye productos químicos industriales."
+    content="Somos una empresa pyme que comercializa productos químicos industriales. Contamos con amplia experiencia en el rubro químico y estamos orientados al mercado de Uruguay, Brasil. Argentina, Paraguay y Bolivia. Ofrecemos productos de todo el mundo y de reconocida calidad. Queremos ser su proveedor de confianza. Contáctenos!"
     name="description">
   <meta content="quimicos, productos quimicos, agroquimicos, fertilizantes, tilceny, urea" name="keywords">
 
